--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,8 @@
         <maven.compiler.version>1.8</maven.compiler.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.argument></maven.compiler.argument>
+        <maven.compiler.argument1></maven.compiler.argument1>
+        <maven.compiler.argument2></maven.compiler.argument2>
         <maven.javadoc.skip>true</maven.javadoc.skip>
         <maven.source.skip>true</maven.source.skip>
         <maven.test.skip>false</maven.test.skip>
@@ -91,7 +92,8 @@
         <profile>
             <id>debugging</id>
             <properties>
-                <maven.compiler.argument>-J-Xdebug -J-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005</maven.compiler.argument>
+                <maven.compiler.argument1>-J-Xdebug</maven.compiler.argument1>
+                <maven.compiler.argument2>-J-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005</maven.compiler.argument2>
             </properties>
         </profile>
         
@@ -108,7 +110,7 @@
         <profile>
             <id>production</id>
             <properties>
-                <maven.compiler.argument>-Aproduction</maven.compiler.argument>
+                <maven.compiler.argument1>-Aproduction</maven.compiler.argument1>
             </properties>
         </profile>
         
@@ -172,7 +174,8 @@
                     <compilerArguments>
                         <bootclasspath>${compiler.bootclasspath.android}</bootclasspath>
                     </compilerArguments>
-                    <compilerArgument>${maven.compiler.argument}</compilerArgument>
+                    <compilerArgument>${maven.compiler.argument1}</compilerArgument>
+                    <compilerArgument>${maven.compiler.argument2}</compilerArgument>
                     <!-- NetBeans seems to need the following line sometimes: -->
                     <generatedSourcesDirectory>target/generated-sources/annotations</generatedSourcesDirectory>
                 </configuration>
