--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,7 @@
                 <version>3.6.0</version>
                 <configuration>
                     <fork>true</fork>
-                    <verbose>true</verbose>
+                    <verbose>false</verbose>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
                     <executable>${maven.compiler.executable}</executable>
