--- a/pom.xml
+++ b/pom.xml
@@ -125,14 +125,14 @@
         <dependency>
             <groupId>com.google.j2objc</groupId>
             <artifactId>j2objc-annotations</artifactId>
-            <version>1.1</version>
+            <version>1.3</version>
         </dependency>
         
         <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.6.2</version>
+            <version>3.8.0</version>
             <scope>test</scope>
         </dependency>
         
@@ -153,7 +153,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>1.10</version>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <id>add-sources</id>
@@ -174,7 +174,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>3.6.2</version>
                 <configuration>
                     <fork>true</fork>
                     <verbose>false</verbose>
@@ -219,7 +219,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>2.20</version>
                 <configuration>
                     <trimStackTrace>false</trimStackTrace>
                 </configuration>
@@ -228,14 +228,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.3</version>
+                <version>3.0.0-M1</version>
                 <configuration>
                     <quiet>true</quiet>
                     <linksource>false</linksource>
                     <doctitle>Digital ID</doctitle>
                     <additionalparam>-Xdoclint:none</additionalparam>
                     <links>
-                        <!-- Include all utility Javadocs here! -->
+                        <!-- Include all Javadocs here! -->
                         <!--<link>https://docs.digitalid.net/utility/logging/${project.version}/</link>-->
                         <link>http://docs.oracle.com/javase/7/docs/api/</link>
                     </links>
@@ -260,7 +260,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.0.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -301,7 +301,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.7.201606060606</version>
+                <version>0.7.9</version>
                 <configuration>
                     <destFile>${project.build.directory}/coverage-reports/jacoco-unit.exec</destFile>
                     <dataFile>${project.build.directory}/coverage-reports/jacoco-unit.exec</dataFile>
@@ -327,7 +327,7 @@
             <plugin>
                 <groupId>com.smoope.utils</groupId>
                 <artifactId>j2objc-maven-plugin</artifactId>
-                <version>1.1.3-SNAPSHOT</version>
+                <version>1.1.4</version>
                 <configuration>
                     <j2objcPath>${J2OBJC_HOME}/j2objc</j2objcPath>
                     <noPackageDirectories>true</noPackageDirectories>
