--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
     
     <!-- You can override properties with 'mvn install -Dtests.skip=true'. -->
     <properties>
+        <compiler.bootclasspath>${compiler.bootclasspath.android}</compiler.bootclasspath>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.version>1.8</maven.compiler.version>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -198,7 +199,7 @@
                         </goals>
                         <configuration>
                             <compilerArguments>
-                                <bootclasspath>${compiler.bootclasspath.android}</bootclasspath>
+                                <bootclasspath>${compiler.bootclasspath}</bootclasspath>
                             </compilerArguments>
                         </configuration>
                     </execution>
